# gcfg

./: .gitignore  COPYRIGHT.TXT  INSTALL  INSTALL.md  README  README.TXT  README.md  cleanup  gcfg  gcfg-py  gcfg.bash_completion  gcfg.config  gcfg.functions  gcfg.migrate  gcfg.py  gcfg.sed  gcfg.sh  gsed  lint  pkglist  setup.py
GCfg/: GCfgA2ps.py  GCfgAdd.py  GCfgCopy.py  GCfgDelta.py  GCfgEdit.py  GCfgExec.py  GCfgFlag.py  GCfgFlagged.py  GCfgGit.py  GCfgInit.py  GCfgLib.py  GCfgList.py  GCfgMove.py  GCfgOriginal.py  GCfgPermissions.py  GCfgPkgDiff.py  GCfgPkgList.py  GCfgPkgSave.py  GCfgRemove.py  GCfgUnflag.py  GCfgVerify.py  __init__.py
ansible/: .ansible-lint  .gitignore  README.md  cleanup  galaxy.yml  lint  requirements.txt  setup.cfg
ansible/debian/: changelog  control  git2changelog  rules
ansible/plugins/action/: copy.py  template.py
ansible/plugins/modules/: commit.py  copy.py  file.py  init.py  pkgsave.py  template.py
ansible/tests/: BAR.j2  FOOBAR.j2  playbook.yaml  run
debian/: changelog  control  copyright  gcfg-python2.6.postinst  gcfg-python2.6.prerm  gcfg-python2.7.postinst  gcfg-python2.7.prerm  gcfg.install  gcfg.postinst  pyshared  rules
gcfg/: __init__.py  a2ps.py  add.py  bin.py  copy.py  delta.py  edit.py  flag.py  flagged.py  git.py  init.py  lib.py  list.py  move.py  original.py  permissions.py  pkgdiff.py  pkglist.py  pkgsave.py  remove.py  unflag.py  verify.py
