[metadata]
name = ansible-collections-gcfg.gcfg
summary = Ansible collection for the GIT-based Configuration Tracking Utility (GCfg)
description-file =
    README.md

author = Cédric Dufour
author-email = http://cedric.dufour.name
home-page = https://github.com/cedric-dufour/gcfg
classifier =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: System :: Systems Administration
    Topic :: Utilities

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/collections/ansible_collections/gcfg/gcfg/ = README.md
    share/ansible/collections/ansible_collections/gcfg/gcfg/roles/ = roles/*
    share/ansible/collections/ansible_collections/gcfg/gcfg/plugins/ = plugins/*
    share/ansible/collections/ansible_collections/gcfg/gcfg/playbooks/ = playbooks/*
    share/ansible/collections/ansible_collections/gcfg/gcfg/scripts/ = scripts/*
    share/ansible/collections/ansible_collections/gcfg/gcfg/docs/ = docs/*
    share/ansible/collections/ansible_collections/gcfg/gcfg/meta/ = meta/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
